# ultimate-utils

./: .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Dockerfile_arm  LICENSE  README.md  agents.md  conda_install.sh  diversity_tutorial.md  docker_tutorial.md  install.sh  interactive.sub  job.sub  main.sh  main_krbtmux.sh  main_vision.sh  notes.txt  pbar_tqdm_pg.py  plots_pg.py  print_sys_path.py  pyproject.toml  python_pg.ipynb  python_pg.py  python_pg2.ipynb  python_playground.ipynb  python_playground.py  pytorch_playground.ipynb  pytorch_playground.py  run_expt.sh  run_tb.sh  setup.py  setup_new_vm.sh  test_import_outside.py  ultimate-utils
prompts/: README.md  captions_for_figures.md  choosing_excellent_research_project.md  common_prompts.py  experiments_results.md  lowering_uncertainty_research_planning.md  patents.md  readme.md  rewrite_4_science.md  summarize.md  tweeting_4_research.md
py_src/: execute_tensorboard.py
remote-pycharm-project-test/: solver.py
scripts/: publish_to_pypi.sh  send_reservation_email.py
sh_files_repo/: conda_install.sh  download_and_install_conda.sh  main.sh  main_dgx.sh  run_expt.sh
tutorials_for_myself/: anonymous_functions_pg.py  args_kwargs.py  cat_vs_stack_pytorch.py  dataclass.py  emergence_plots.py  example_msg.capnp  forced_named_arguments_start_in_the_middle.py  fstrings_pg.py  metric_causes_step_jump.py  modules_in_python_bmg.md  my_logging.py  my_wandb.py  percy_talk_in_context_learning_icl.md  pg_default_dict.py  pg_dicts.py  pg_str.py  print_filename_from_running_file.py  progressbar2.py  python_pg1.py  (+2 more)
(+695 files in other folders)
