[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ultimate-utils"
version = "0.10.1"
description = "Brando's Ultimate Utils for Science, Machine Learning, and AI"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Brando Miranda", email = "brandojazz@gmail.com" },
]
dependencies = [
    "fire",
    "dill",
    "networkx>=2.5",
    "scipy",
    "scikit-learn",
    "lark-parser",
    "tensorboard",
    "pandas",
    "progressbar2",
    "requests",
    "aiohttp",
    "numpy",
    "plotly",
    "wandb",
    "matplotlib",
    "nvidia-htop",
    "openai",
    "anthropic",
    "jsonlines",
    "sglang",
    "seaborn",
    "twine",
    "dspy-ai",
    "ragatouille",
    "torch",
    "trl",
    "transformers",
    "peft",
    "accelerate",
    "datasets",
    "bitsandbytes",
    "evaluate",
    "einops",
    "sentencepiece",
]

[project.urls]
Homepage = "https://github.com/brando90/ultimate-utils"
Repository = "https://github.com/brando90/ultimate-utils"

[tool.hatch.build.targets.wheel]
packages = ["py_src/uutils"]

[tool.hatch.build.targets.sdist]
exclude = [
    "ultimate-utils",
    "experiments",
    "tutorials",
    "tests",
]
